File-based script failed with project/session/log.
Only affected windows users.